# Trifecta-Sample-Linux

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
lib/Trifecta-Driver/: .gitignore  CMakeLists.txt  FS_Trifecta.h  README.md
lib/Trifecta-Driver/common/: FS_Trifecta.c  FS_Trifecta_Device.c  FS_Trifecta_Device_Utils.c  FS_Trifecta_Networked.c  FS_Trifecta_Packet_Utils.c  FS_Trifecta_Serial.c
lib/Trifecta-Driver/include/: FS_Trifecta_Defs.h  FS_Trifecta_Defs_Communication.h  FS_Trifecta_Defs_Initializers.h  FS_Trifecta_Defs_Mutex.h  FS_Trifecta_Defs_Packets.h  FS_Trifecta_Defs_Platform_Types.h  FS_Trifecta_Defs_Ringbuffer.h  FS_Trifecta_Device.h  FS_Trifecta_Device_Utils.h  FS_Trifecta_Interfaces.h  FS_Trifecta_Networked.h  FS_Trifecta_Serial.h
lib/Trifecta-Driver/linux/: FS_Trifecta_Interfaces.c  FS_Trifecta_Interfaces_Networked.c  FS_Trifecta_Interfaces_Serial.c
lib/Trifecta-Driver/tests/: CMakeLists.txt  README.md  test_parse_base64.c  test_parse_binary.c  test_parse_commands.c
src/: example_network_read.c  example_serial_read.c
